后端逻辑完善

--- a/extension/popup/popup.html
+++ b/extension/popup/popup.html
@@ -68,6 +68,12 @@
       </div>
     </div>
     
+    <!-- 数据导出区域 -->
+    <div class="data-actions">
+      <button id="exportJournalBtn" class="action-btn">生成会话日志 (Markdown)</button>
+      <button id="exportJSONBtn" class="action-btn secondary">导出原始数据 (JSON)</button>
+    </div>
+    
     <!-- 版权信息 -->
     <div class="footer">
       <p>© 2024 AttentionPulse</p>
